# python-dio-bootcamp-suzano

./: Readme.md
conjuntos/: conjuc.py
dicionarios/: dic.py
functions/: first_function.py  param_especial.py
hands_on/: bank.py  readme.md
hands_on_POO/: bank_poo.py
hands_on_add_func/: bank_func.py
hands_on_datetime/: date_time.py
image_processor/: pyproject.toml
image_processor/examples/: example_usage.py
image_processor/simple_image_processor/: __init__.py  processing.py  utils.py
lists/: listas.py  metodos_listas.py
poo/: desafio_bicicletaria.py
strings_manipule/: fatiamento_strings.py  interpolacao.py  multiline_strings.py  operadores_aritmeticos.py  strings.py
tuplas/: tuplas.py
